--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ heading_anchors: true
 # Aux links for the upper right navigation
 aux_links:
   "Just the Docs on GitHub":
-    - "//github.com/vdcompany"
+    - "//github.com/hanjonggyu"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
@@ -82,7 +82,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 back_to_top: true
 back_to_top_text: "위로"
 
-footer_content: "COPYRIGHT &copy; 2021 VDCOMPANY | MORE CONVENIENT & COMFORTABLE LIFE"
+footer_content: "COPYRIGHT &copy; 2021 | MORE CONVENIENT & COMFORTABLE LIFE"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
@@ -93,7 +93,7 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: "https://github.com/vdcompany/vdcompany.github.io" # the github URL for your repo
+gh_edit_repository: "https://github.com/hanjonggyu/hanjonggyu.github.io" # the github URL for your repo
 gh_edit_branch: "master" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
