--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 
 
 # Footer "Edit this page on GitHub" link text
-gh_edit_link: true # show or hide edit this page link
+gh_edit_link: false # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub"
 gh_edit_repository: "https://github.com/hanjonggyu/hanjonggyu.github.io" # the github URL for your repo
 gh_edit_branch: "master" # the branch that your docs is served from
@@ -112,7 +112,7 @@ plugins:
 kramdown:
   syntax_highlighter_opts:
     block:
-      line_numbers: false
+      line_numbers: true
 
 compress_html:
   clippings: all
